--- a/equipo2/src/components/SingleProduct/component.css
+++ b/equipo2/src/components/SingleProduct/component.css
@@ -2,17 +2,19 @@
     display: flex;
     flex-direction: row;
     width: 80%;
-    flex-grow: 0;
+    justify-content: space-between;
+    margin-top: 50px;
 }
 
 .left-side {
     display: flex;
     justify-content: center;
+    width: 50%;
 }
 
 .left-side>img {
     margin-top: 20px;
-    width: 200px;
+    height: 300px;
 }
 
 .right-side {
@@ -31,4 +33,14 @@
 
 .single-rating {
     display: flex;
+}
+
+.buy-options {
+    margin-top: 15px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.buy-option button:first-child {
+    margin-right: 5px;
 }
