--- a/equipo2/src/components/Header/component.css
+++ b/equipo2/src/components/Header/component.css
@@ -13,6 +13,6 @@
     justify-content:space-between;
     margin-right: 50px;
 }
-.MuiTypography-root {
+/* .MuiTypography-root {
     visibility: hidden;
-}
+} */
