--- a/equipo2/src/components/SingleCategory/component.css
+++ b/equipo2/src/components/SingleCategory/component.css
@@ -1,9 +1,16 @@
 
-.SingleCategory {
+#SingleCategory {
     margin-left: 80px;
     margin-right: 100px;
 }
 
+#ImageListItem{
+    margin: 2%;
+}
+
 #ImageListItem > img {
-    height: 300px;
+    height: 800px;
+    width: 500px;
+    object-fit: contain;
+    margin: 15px;
 }
