--- a/equipo2/src/components/Footer/component.css
+++ b/equipo2/src/components/Footer/component.css
@@ -1,5 +1,4 @@
 .footerContainer {
-    position: fixed;
     bottom: 0;
     background-color:#1976d2;
     width: 100%;
@@ -9,20 +8,21 @@
     align-items: center;
     justify-content: space-between;
 }
-
+.footerContainer div {
+    height: 100%;
+}
 #nav {
     display:flex;
     gap: 10px;
 }
 #social {
     width: 100%;
+    margin-right: 10px;
     display: flex;
-    gap: 0;
+    gap: 15px;
     justify-content: flex-end;
+    align-items: center;
 }
 #social a {
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-    min-width: fit-content;
+    color: #1d125a;
 }
