--- a/equipo2/src/components/AboutUs/component.css
+++ b/equipo2/src/components/AboutUs/component.css
@@ -1,9 +1,14 @@
 
-.AboutUs{
+.AboutUsInfo{
     width: 80%;
     margin-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items:center;
+    align-items: center;
+}
+
+.map-container {
+    position: center;
+    /*width: 80%;*/
 }
