--- a/equipo2/src/components/Header/component.css
+++ b/equipo2/src/components/Header/component.css
@@ -1,14 +1,4 @@
 
-.MuiTabs-flexContainer {
-    justify-content:space-between;
-    margin-right: 50px;
-}
-.MuiTypography-root {
-    display: none;
-}
-.MuiTabs-root {
-    margin-bottom: 50px;
-}
 .topHeader {
     height: 10vh;
 }
@@ -16,10 +6,13 @@
     height:100%;
     max-height: fit-content;
 }
-
-.css-heg063-MuiTabs-flexContainer {
+#headerNav {
+    width: 92%;
+    margin: auto;
+    margin-bottom: 8px;
     display: grid;
     grid-template-columns: repeat( auto-fit, minmax(120px, 1fr) );
 }
-/* el problema de este autofit es el marcardor de debajo que se ven con todo el div y no con el elemento, 
-por lo que cuando se pone en dos lineas se ve mal */
+#headerNav a:focus {
+    border-bottom: 2px solid #1976d2;
+}
