--- a/equipo2/src/components/HomePage/component.css
+++ b/equipo2/src/components/HomePage/component.css
@@ -1,7 +1,7 @@
 .imagesContainer {
-    margin: auto;
-    margin-top:10px;
+    margin: 20px auto 20px auto;
 }
-img {
-    object-fit: contain!important;
+
+#images .productImages {
+    object-fit: contain;
 }
