--- a/equipo2/src/components/Cart/component.css
+++ b/equipo2/src/components/Cart/component.css
@@ -31,10 +31,11 @@
 }
 
 .payments {
-    margin-left: 15px;
+    margin-left: 150px;
     display: flex;
     flex-flow: column;
     width: 30%;
+    margin-top: 80px;
 }
 
 .resume-item {
