--- a/equipo2/src/components/AboutUs/component.css
+++ b/equipo2/src/components/AboutUs/component.css
@@ -1,14 +1,14 @@
 
 .AboutUsInfo{
     width: 80%;
-    margin-top: 50px;
+    margin-top: 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.map-container {
-    position: center;
-    /*width: 80%;*/
-}
+/* .map-container {
+    position: relative;
+    width: 80%;
+}  */
