--- a/equipo2/src/components/AboutUs/component.css
+++ b/equipo2/src/components/AboutUs/component.css
@@ -8,7 +8,7 @@
     align-items: center;
 }
 
-/* .map-container {
-    position: relative;
+#map-container {
+    position: center;
     width: 80%;
-}  */
+}  
