--- a/equipo2/src/components/Footer/component.css
+++ b/equipo2/src/components/Footer/component.css
@@ -1,28 +1,31 @@
 .footerContainer {
     bottom: 0;
-    background-color:#1976d2;
+    background-color:#23394d;
     width: 100%;
     height: fit-content;
     display: grid;
     grid-template-columns: repeat( auto-fit, minmax(320px, 1fr) );    
     align-items: center;
     justify-content: space-between;
-}
-.footerContainer div {
-    height: 100%;
+    padding: 2rem;
+    row-gap: 1rem;
 }
 #nav {
     display:flex;
-    gap: 10px;
+    gap: 1rem;
+    margin-left: 2rem;
 }
 #social {
     width: 100%;
-    margin-right: 10px;
     display: flex;
     gap: 15px;
     justify-content: flex-end;
     align-items: center;
+    margin-right: 3rem;
 }
-#social a {
-    color: #1d125a;
+a {
+    font-size:1.2rem;
+    text-decoration: none;
+    color: rgb(235, 176, 50);
+    text-transform: uppercase;
 }
