--- a/equipo2/src/components/HomePage/component.css
+++ b/equipo2/src/components/HomePage/component.css
@@ -1,12 +1,13 @@
 .slider {
     width: 100%;
-    height: 70vh;
+    height: 65vh;
     display: grid;
     grid-template-rows: 3fr 1fr;
     gap: 2rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 4rem;
   }
   
   .image {
