--- a/equipo2/src/components/Footer/component.css
+++ b/equipo2/src/components/Footer/component.css
@@ -7,7 +7,7 @@
     grid-template-columns: repeat( auto-fit, minmax(320px, 1fr) );    
     align-items: center;
     justify-content: space-between;
-    padding: 2rem;
+    padding: 2rem 0;
     row-gap: 1rem;
 }
 #nav {
@@ -21,11 +21,13 @@
     gap: 15px;
     justify-content: flex-end;
     align-items: center;
-    margin-right: 3rem;
 }
-a {
+#nav a, #social a {
     font-size:1.2rem;
     text-decoration: none;
     color: rgb(235, 176, 50);
     text-transform: uppercase;
+}
+#social a:last-child {
+    margin-right: 2rem;
 }
