--- a/equipo2/src/components/Header/component.css
+++ b/equipo2/src/components/Header/component.css
@@ -1,9 +1,10 @@
 .header {
-    width: 95%;
+    width: 100%;
     margin: auto;
     margin-top: 0;
+    background-color: #23394d;
+    padding-bottom: 1rem;
 }
-
 .topHeader {
     height: 10vh;
     display: flex;
@@ -16,50 +17,67 @@
 }
 #headerNav {
     width: 100%;
+    height: 5vh;
     margin-bottom: 8px;
     display: grid;
     grid-template-columns: repeat( 7, 1fr);
     align-items: center;
 }
+#headerNav div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  max-height: fit-content;
+  align-items: center;
+}
 .header a {
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
-    color: #23394d;
+    color: #ebb032;
 }
 #headerNav a:hover {
     border-bottom: 3px solid #1976d2;
+}
+#headerNav svg {
+  max-height: fit-content;
 }
 .mobileIcon {
   display: none;
 }
 #active {
   background-color: #ebb032;
-  color: #23394d;
   border-radius: 5px;
-  padding:0.3rem;
 }
-
+#active a {
+  color: #23394d;
+}
 @media screen and (max-width: 860px) { /* this media query allows us to change the top bar to a lateral one*/
   .showed {
      transform: translateX(100%) ; /* this class hide the lateral nav*/
   }
+  #headerNav, #headerNav div {
+    display: flex;
+    align-items: center;
+  } 
   #headerNav {
       background-color: #23394d;
       position: absolute;
       top: 25vh;
-      width: 60%;
-      margin-left: 35%;
+      width: 50%;
+      margin-left: 50%;
       height: 50vh;
-      justify-content: center;
-      display: flex;
       flex-direction: column;
-      row-gap: 2vh;
-      align-items: center;
       left: -100%;
       transition: 0.5s all ease;   
       z-index: 2;
-      border-radius: 10px;
+      border-radius: 0 10px 10px 0;
+      padding: 1rem 0;
+  }
+  #headerNav div {
+      row-gap: 2vh;
+      padding: 0 0.8rem;
   }
   .showed a {
     color: #ebb032;
@@ -67,6 +85,7 @@
   .mobileIcon { 
     display: block;
     cursor: pointer;
+    color: #ebb032;
   }
 }
   
