--- a/equipo2/src/components/SingleProduct/component.css
+++ b/equipo2/src/components/SingleProduct/component.css
@@ -1,6 +1,7 @@
 .single-product {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     width: 80%;
     justify-content: space-between;
     margin: 50px auto;
@@ -57,9 +58,8 @@
 
 @media only screen and (max-width: 600px) {
     .single-product {
-        flex-direction: column;
-        width: 100%;
-        align-items: center;
+        justify-content: center;
+        width: 95%;
     }
     .left-side {
         width: 70%;
