--- a/equipo2/src/components/Header/component.css
+++ b/equipo2/src/components/Header/component.css
@@ -5,6 +5,7 @@
     background-color: #23394d;
     padding-bottom: 0.2rem;
 }
+
 .topHeader {
     height: 10vh;
     width: 98%;
@@ -12,11 +13,13 @@
     display: flex;
     justify-content: space-between;
 }
+
 .topHeader img {
-    height:100%;
+    height: 100%;
     max-height: fit-content;
     object-fit: cover;
 }
+
 #headerNav {
     width: 98%;
     height: 8vh;
@@ -26,73 +29,133 @@
     align-items: center;
     padding: 0.2rem;
 }
+
 #headerNav div {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 95%;
     align-items: center;
-  }
-.header a {
+}
+
+.header a,
+.cart-header {
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
     color: #ebb032;
     width: fit-content;
 }
+
 #headerNav a:hover {
     border-bottom: 3px solid #ebb032;
 }
+
+.cart-header:hover {
+    background-color: #ebb032;
+    color: #23394d;
+    box-shadow: 2px 1px 5px #ebb13225;
+    cursor: pointer;
+}
+
 #headerNav svg {
     max-height: max-content;
 }
+
 .mobileIcon {
     display: none;
 }
+
 #active {
     background-color: #ebb032;
     border-radius: 5px;
 }
+
 #active a:hover {
     border-bottom: 3px solid #23394d;
 }
-  #active a {
+
+#active a,
+#active .cart-header {
     color: #23394d;
 }
-@media screen and (max-width: 860px) { /* this media query allows us to change the top bar to a lateral one*/
-  .showed {
-      transform: translateX(100%) ; /* this class hide the lateral nav*/
-  }
-  #headerNav, #headerNav div, .mobileIcon {
-      display: flex;
-      align-items: center;
-  } 
-  #headerNav {
-      background-color: #23394d;
-      position: absolute;
-      top: 25vh;
-      width: 50%;
-      margin-left: 45%;
-      height: 50vh;
-      flex-direction: column;
-      left: -100%;
-      transition: 0.5s all ease;   
-      z-index: 2;
-      border-radius: 0 10px 10px 0;
-      padding: 1rem 0.2rem;
-  }
-  #headerNav div {
-      row-gap: 2vh;
-      padding: 0 0.8rem;
-  }
-  .showed a {
-      color: #ebb032;
-  }
-  .mobileIcon { 
-      cursor: pointer;
-      color: #ebb032;
-      margin-right: 0.8rem;
+
+@media screen and (max-width: 860px) {
+    /* this media query allows us to change the top bar to a lateral one*/
+    .showed {
+        transform: translateX(100%);
+        /* this class hide the lateral nav*/
+    }
+    #headerNav,
+    #headerNav div,
+    .mobileIcon {
+        display: flex;
+        align-items: center;
+    }
+    #headerNav {
+        background-color: #23394d;
+        position: absolute;
+        top: 25vh;
+        width: 50%;
+        margin-left: 45%;
+        height: 50vh;
+        flex-direction: column;
+        left: -100%;
+        transition: 0.5s all ease;
+        z-index: 2;
+        border-radius: 0 10px 10px 0;
+        padding: 1rem 0.2rem;
+    }
+    #headerNav div {
+        row-gap: 2vh;
+        padding: 0 0.8rem;
+    }
+    .showed a {
+        color: #ebb032;
+    }
+    .mobileIcon {
+        cursor: pointer;
+        color: #ebb032;
+        margin-right: 0.8rem;
     }
 }
-  
 
+.drawer-cart {
+    text-align: center;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+}
+
+.drawer-cart>h4 {
+    text-align: right;
+    padding-right: 2rem;
+}
+
+.drawer-item {
+    display: flex;
+    padding: 1rem;
+    justify-content: space-evenly;
+}
+
+.drawer-item>section {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+}
+
+.drawer-item>section>div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.drawer-item>section>h5 {
+    text-align: right;
+}
+
+.drawer-item>img {
+    width: 5rem;
+    border: 2px solid #ebb032;
+    opacity: 0.7;
+    border-radius: 5px;
+}
