--- a/equipo2/src/components/AboutUs/component.css
+++ b/equipo2/src/components/AboutUs/component.css
@@ -1,4 +1,9 @@
 
+
+.AboutUs{
+    margin: auto;
+}
+
 .AboutUsInfo{
     width: 80%;
     margin: auto;
@@ -6,6 +11,22 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.AboutUsInfo > p {
+    color:#23394d;
+    font-size:large;
+}
+
+.AboutUsInfo > a {
+    text-align: center; 
+    text-decoration: none;
+    color: #ebb032; 
+    font-size: large;
+}
+
+.gmap_canvas{
+    margin: auto ;
 }
 
 #gmap_canvas{
