--- a/equipo2/src/components/Faq/component.css
+++ b/equipo2/src/components/Faq/component.css
@@ -1,7 +1,7 @@
-/* #panel1d-header p {
-    font-size: 2rem;
-} */
 #faqContainer {
     width: 80%;
     margin: 2rem auto;
+}
+h2 {
+    font-size: clamp(2rem, 5vw + 1rem, 4rem);
 }
