--- a/equipo2/src/components/Header/component.css
+++ b/equipo2/src/components/Header/component.css
@@ -4,6 +4,7 @@
     margin: 0 auto;
     background-color: #23394d;
     padding-bottom: 0.2rem;
+    padding-top: 2rem;
 }
 
 .topHeader {
@@ -11,7 +12,7 @@
     width: 98%;
     margin: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .topHeader img {
@@ -156,4 +157,32 @@
     border: 2px solid #ebb032;
     opacity: 0.7;
     border-radius: 5px;
+}
+
+
+/*Logo animation*/
+
+.topHeader h1 {
+    text-align: center;
+    background: linear-gradient(to left, #f3ec88, #ffc342, #eed295);
+    background-clip: text;
+    margin: 0;
+    font-size: 3rem;
+    background-size: 300% 300%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: transparent;
+    background-position: left;
+    animation: titleAnim 10s infinite;
+}
+
+@keyframes titleAnim {
+    0% {
+        background-position: left;
+    }
+    50% {
+        background-position: right;
+    }
+    100% {
+        background-position: left;
+    }
 }
