--- a/equipo2/src/components/Header/component.css
+++ b/equipo2/src/components/Header/component.css
@@ -25,12 +25,11 @@
     background: linear-gradient(to left, #f3ec88, #ffc342, #eed295);
     background-clip: text;
     margin: 0;
-    font-size: 3rem;
+    font-size: clamp(1.8rem, 4vw + 0.8rem, 3.8rem);
     background-size: 300% 300%;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     color: transparent;
     background-position: left;
-    animation: titleAnim 10s infinite;
 }
 
 #headerNav {
@@ -133,9 +132,6 @@
         color: #ebb032;
         margin-right: 0.8rem;
     }
-    .topHeader h1 {
-        font-size: 2rem;
-    }
 }
 
 .drawer-cart {
@@ -178,17 +174,3 @@
     border-radius: 5px;
 }
 
-
-/*Logo animation*/
-
-@keyframes titleAnim {
-    0% {
-        background-position: left;
-    }
-    50% {
-        background-position: right;
-    }
-    100% {
-        background-position: left;
-    }
-}
